--- a/package.json
+++ b/package.json
@@ -4,24 +4,31 @@
   "description": "Fun card game!",
   "main": "src/server/index.js",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "webpack --config=config/webpack.prod.js --mode production",
     "start": "npm run build && node src/server/index.js",
-    "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "client": "webpack-dev-server --config=config/webpack.dev.js --mode development --devtool inline-source-map --hot",
     "server": "nodemon src/server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Darshan Bhatta",
   "dependencies": {
+    "autoprefixer": "^9.7.4",
     "babel-polyfill": "^6.26.0",
     "bootstrap": "^4.4.1",
     "express": "^4.16.3",
     "express-socket.io-session": "^1.3.5",
+    "extract-text-webpack-plugin": "^3.0.2",
     "idempotent-babel-polyfill": "^7.4.4",
+    "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "preact": "^10.2.1",
+    "preact-compat": "^3.19.0",
     "randomcolor": "^0.5.4",
     "react": "^16.12.0",
     "react-alert": "^6.0.0",
     "react-alert-template-basic": "^1.0.0",
     "react-confirm-alert": "^2.4.1",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
@@ -29,7 +36,12 @@
     "reactstrap": "^8.2.0",
     "socket.io": "^2.3.0",
     "socket.io-client": "^2.3.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "webpack-bundle-analyzer": "^3.6.0",
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^4.2.2",
+    "webpack-node-externals": "^1.7.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -38,7 +50,7 @@
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.0",
     "babel-loader": "^8.0.0",
-    "clean-webpack-plugin": "^1.0.0",
+    "clean-webpack-plugin": "^1.0.1",
     "concurrently": "^4.0.0",
     "css-loader": "^2.0.0",
     "eslint": "^6.8.0",
@@ -55,9 +67,10 @@
     "html-webpack-plugin": "^3.2.0",
     "nodemon": "^1.17.3",
     "style-loader": "^0.23.0",
+    "terser-webpack-plugin": "^2.3.2",
     "url-loader": "^1.0.1",
-    "webpack": "^4.5.0",
-    "webpack-cli": "^3.0.8",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.1.3"
   }
 }
